--- a/css/style.css
+++ b/css/style.css
@@ -245,13 +245,15 @@ a:focus {
 .hero {
     position: relative;
     width: 100%;
+    height: 100vh;
     margin-bottom: 45px;
     padding: 120px 0 0 0;
     overflow: hidden;
     background: linear-gradient(rgba(239, 35, 60, .95), rgba(239, 35, 60, .95)), url(../img/hero-bg.jpg);
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    
 }
 
 .hero .container-fluid {
@@ -268,6 +270,7 @@ a:focus {
     max-width: 82%;
     max-height: 82%;
     scale: 250%;
+    background-size: cover;
 }
 
 .hero .hero-content {
@@ -494,7 +497,7 @@ a:focus {
 .about .about-img img {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
 }
 
@@ -1306,19 +1309,24 @@ a:focus {
 .contact {
     position: relative;
     width: 100%;
+    height: 100%;
     margin: 45px 0;
     background: #EF233C;
 }
 
 .contact .container-fluid {
     background: url(../img/contact.jpg) left center no-repeat;
+    float: left;
     background-size: contain;
+    height: 100%;
+    
 }
 
 .contact .contact-form {
     position: relative;
     padding: 90px 0 90px 45px;
     background: #EF233C;
+    height: 100vh;
 }
 
 .contact .contact-form input {
