--- a/css/style.css
+++ b/css/style.css
@@ -1309,7 +1309,7 @@ a:focus {
 .contact {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 45px 0;
     background: #EF233C;
 }
@@ -1318,7 +1318,7 @@ a:focus {
     background: url(../img/contact.jpg) left center no-repeat;
     float: left;
     background-size: contain;
-    height: 100%;
+    height: 100vh;
     
 }
 
